# railbot-v2

./: CMakeLists.txt  README.md
Src/: Main.cpp
Src/Common/Blackboard/: Blackboard.cpp  Blackboard.h  BlackboardThread.cpp  BlackboardThread.h  TrippleBuffer.cpp  TrippleBuffer.h
Src/Common/Math/: Angle.cpp  Angle.h  Constants.h  RotationMatrix.cpp
Src/Common/Motion/: ForwardKinematic.cpp  ForwardKinematic.h  InverseKinematic.cpp  InverseKinematic.h  MotionUtilities.cpp  MotionUtilities.h  SensorData.h
Src/Common/RobotParts/: FSRSensors.h  FsrSensors.h  Joints.h  Legs.h  Limbs.h
Src/Common/Threads/: Cognition.cpp  Cognition.h  Lower.cpp  Lower.h  Motion.cpp  Motion.h  ThreadBase.h  ThreadManager.cpp  ThreadManager.h  Timer.h  Upper.cpp  Upper.h
Src/Common/Time/: Time.cpp  Time.h
Src/Common/Tools/: Range.h
Src/Modules/BehaviorControl/ActionHandler/: ActionHandler.cpp  ActionHandler.h
Src/Modules/BehaviorControl/LEDHandler/: LEDHandler.cpp  LEDHandler.h
Src/Representations/Configuration/: CameraSettings.cpp  CameraSettings.h  JointLimits.h  MassCalibration.cpp  MassCalibration.h  RobotDimensions.h
Src/Representations/Infrastructure/: BatterySensorData.h  CameraInfo.cpp  CameraInfo.h  FSRSensorData.cpp  FSRSensorData.h  FrameInfo.cpp  FrameInfo.h  JointAngle.cpp  JointRequest.h  JointSensorData.h  LEDRequest.cpp  LEDRequest.h  RobotStates.cpp  RobotStates.h  Stiffness.h  TouchSensorData.cpp
Src/Representations/MotionControl/: HeadMotionEngineOutput.cpp  HeadMotionEngineOutput.h  KeyFrameEngineOutput.cpp  KeyFrameEngineOutput.h  MotionInfo.h  WalkingEngineOutput.h
Src/Representations/Sensing/: RobotModel.cpp  RobotModel.h
Src/Representations/SensorData/: BatterySensorData.cpp  BatterySensorData.h  FSRSensorData.cpp  FSRSensorData.h  FsrSensorData.cpp  FsrSensorData.h  InertialSensorData.cpp  InertialSensorData.h  JointAngle.h  JointAngles.cpp  JointAngles.h  JointSensorData.cpp  JointSensorData.h  TouchSensorData.cpp  TouchSensorData.h
(+22 files in other folders)
